--- a/HaouseBook/HaouseBook.csproj
+++ b/HaouseBook/HaouseBook.csproj
@@ -132,6 +132,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\ComboBoxResource.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\TextBlockResource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
